# desafio

./: .gitignore  README.md  app.py  pyproject.toml
data/: groups.json  reads.json  sensors.json
server/: api.py  driver.py  helpers.py  models.py  routes.py  settings.py
server/apps/hardware/: validators.py
server/apps/reports/: __init__.py  api.py  models.py  views.py
