[tool.poetry]
name = "desafio sgh"
version = "0.1.0"
description = "Desafio para seleção de novo(a) bolsista para o projeto Smart GreenHouse"
authors = ["Gustavo Simões <gustavo.simoes@grad.ufsc.br>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
pymongo = "^4.3.3"
marshmallow = "^3.19.0"
pytz = "^2022.7"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
